add js logic for horizontalScroll

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,47 +1,6 @@
-<!--nav-bar start-->
-<!--<div class="nav-bar">-->
-<!--<div class="nav-bar__logo-container">-->
-<!--<svg class="logo">-->
-<!--<use xlink:href="img/sprite.svg#logo_header_sticky"></use>-->
-<!--</svg>-->
-<!--</div>-->
-<!--<nav class="main-nav" role="navigation">-->
-<!--<ul class="main-nav__list">-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#home" class="main-nav__link  main-nav__link&#45;&#45;bar">Home</a>-->
-<!--</li>-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#company" class="main-nav__link  main-nav__link&#45;&#45;bar" data-ps2id-offset="100">Company</a>-->
-<!--</li>-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#solutions" class="main-nav__link  main-nav__link&#45;&#45;bar">KST Solutions</a>-->
-<!--</li>-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#resources" class="main-nav__link  main-nav__link&#45;&#45;bar">Resources</a>-->
-<!--</li>-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#coverage" class="main-nav__link  main-nav__link&#45;&#45;bar">Coverage</a>-->
-<!--</li>-->
-<!--<li class="main-nav__item">-->
-<!--<a href="#about" class="main-nav__link  main-nav__link&#45;&#45;bar">About us</a>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</nav>-->
-<!--<div class="header__contacts">-->
-<!--<a href="#" class="header__icon-container">-->
-<!--<svg class="icon icon&#45;&#45;black">-->
-<!--<use xlink:href="img/sprite.svg#icon_ln"></use>-->
-<!--</svg>-->
-<!--</a>-->
-<!--<div class="header__btn-container">-->
-<!--<button class="btn">contact us</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--nav-bar end-->
 <!--Features section start-->
 <section id="company" class="features-section">
-  <div class="container">
+  <div class="features-container">
     <div class="features__text-container">
       <h2 class="heading">What can we do for you?</h2>
       <p class="features__text">
@@ -54,119 +13,117 @@
     </div>
     <div class="dropdown-row">
       <div class="dropdown-container">
-        <div class="dropdown dropdown--teal">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+        <div class="dropdown-wrapper">
+          <div class="dropdown dropdown--teal">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Indirect Tax</p>
           </div>
-          <p class="dropdown__text">Indirect Tax</p>
-        </div>
-        <div class="dropdown__content  dropdown__content--teal">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
+          <div class="dropdown__content  dropdown__content--teal">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
+          </div>
+          <div class="dropdown dropdown--black">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Risk Management</p>
+          </div>
+          <div class="dropdown__content dropdown__content--black">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown dropdown--orange">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+        <div class="dropdown-wrapper">
+          <div class="dropdown dropdown--orange">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Tax Technology</p>
           </div>
-          <p class="dropdown__text">Tax Technology</p>
-        </div>
-        <div class="dropdown__content dropdown__content--orange">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
+          <div class="dropdown__content dropdown__content--orange">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
+          </div>
+          <div class="dropdown dropdown--light-gray">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Transfer Pricing</p>
+          </div>
+          <div class="dropdown__content dropdown__content--light-gray">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown dropdown--dark-gray">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+        <div class="dropdown-wrapper">
+          <div class="dropdown dropdown--dark-gray">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Embedded Analytics</p>
           </div>
-          <p class="dropdown__text">Embedded Analytics</p>
-        </div>
-        <div class="dropdown__content dropdown__content--dark-gray">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="dropdown-row">
-      <div class="dropdown-container">
-        <div class="dropdown dropdown--black">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+          <div class="dropdown__content dropdown__content--dark-gray">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
           </div>
-          <p class="dropdown__text">Risk Management</p>
-        </div>
-        <div class="dropdown__content dropdown__content--black">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
-        </div>
-      </div>
-      <div class="dropdown-container">
-        <div class="dropdown dropdown--light-gray">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+          <div class="dropdown dropdown--dark-blue">
+            <div class="dropdown__icon-container">
+              <svg class="dropdown__icon">
+                <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+              </svg>
+            </div>
+            <p class="dropdown__text">Statutory Reporting</p>
           </div>
-          <p class="dropdown__text">Transfer Pricing</p>
-        </div>
-        <div class="dropdown__content dropdown__content--light-gray">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
-        </div>
-      </div>
-      <div class="dropdown-container">
-        <div class="dropdown dropdown--dark-blue">
-          <div class="dropdown__icon-container">
-            <svg class="dropdown__icon">
-              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
-            </svg>
+          <div class="dropdown__content dropdown__content--dark-blue">
+            <ul class="dropdown__list">
+              <li class="dropdown__item">BEPS</li>
+              <li class="dropdown__item">CBCO</li>
+              <li class="dropdown__item">INtercompany</li>
+              <li class="dropdown__item">PIEI</li>
+              <li class="dropdown__item">Manager TP’S</li>
+            </ul>
           </div>
-          <p class="dropdown__text">Statutory Reporting</p>
-        </div>
-        <div class="dropdown__content dropdown__content--dark-blue">
-          <ul class="dropdown__list">
-            <li class="dropdown__item">BEPS</li>
-            <li class="dropdown__item">CBCO</li>
-            <li class="dropdown__item">INtercompany</li>
-            <li class="dropdown__item">PIEI</li>
-            <li class="dropdown__item">Manager TP’S</li>
-          </ul>
         </div>
       </div>
     </div>
@@ -174,7 +131,6 @@
 </section>
 <!--Features section end-->
 <!--Solutions section start-->
-
 <section id="solutions" class="solutions-section">
   <div class="container">
     <div class="solutions__text-container">
@@ -354,26 +310,31 @@
       </div>
     </div>
     <div class="resources__filter-container">
-      <ul class="filter">
-        <li class="filter__item">
-          <a href="#" class="filter__link">Global</a>
-        </li>
-        <li class="filter__item">
-          <a href="#" class="filter__link">Brazil</a>
-        </li>
-        <li class="filter__item">
-          <a href="#" class="filter__link">Poland</a>
-        </li>
-        <li class="filter__item">
-          <a href="#" class="filter__link">Spain</a>
-        </li>
-        <li class="filter__item">
-          <a href="#" class="filter__link">Norway</a>
-        </li>
-      </ul>
+      <div class="filter-box">
+        <div class="filter">
+          <button class="filter__btn">Global</button>
+          <ul class="filter__list">
+            <li class="filter__item">
+              <a href="#" class="filter__link">Global</a>
+            </li>
+            <li class="filter__item">
+              <a href="#" class="filter__link">Brazil</a>
+            </li>
+            <li class="filter__item">
+              <a href="#" class="filter__link">Poland</a>
+            </li>
+            <li class="filter__item">
+              <a href="#" class="filter__link">Spain</a>
+            </li>
+            <li class="filter__item">
+              <a href="#" class="filter__link">Norway</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="resources__progress-scroll-container">
-    
+      <div class="resources__progress-scroll"></div>
     </div>
     <div class="resources__articles-container">
       <div class="resources__articles">
@@ -399,7 +360,7 @@
       <div class="resources__articles">
         <div class="article">
           <figure>
-            <img src="img/webp/italy.jpg" alt="Norway" class="article__image">
+            <img src="img/webp/italy.jpg" alt="Italy" class="article__image">
           </figure>
           <span class="article__country">
             Italy
@@ -418,13 +379,52 @@
       <div class="resources__articles">
         <div class="article">
           <figure>
-            <img src="img/webp/poland.jpg" alt="Norway" class="article__image">
+            <img src="img/webp/poland.jpg" alt="Poland" class="article__image">
           </figure>
           <span class="article__country">
             Poland
           </span>
           <h4 class="article__title">
             VAT Registers and JPK Extracts for Poland ready for July 2018
+          </h4>
+          <p class="article__text">
+            Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus…
+          </p>
+          <a href="#" class="article__link">
+            Read more
+          </a>
+        </div>
+      </div>
+      <div class="resources__articles">
+        <div class="article" id="norway">
+          <figure>
+            <img src="img/webp/norway.jpg" alt="Norway" class="article__image">
+          </figure>
+          <span class="article__country">
+            Norway
+          </span>
+          <h4 class="article__title">
+            5 Principles of Norway SAF-T
+          </h4>
+          <p class="article__text">
+            SAF-T, an initiative led the Organisation for Economic Co-operation and Development
+            (OECD)…
+          </p>
+          <a href="#" class="article__link">
+            Read more
+          </a>
+        </div>
+      </div>
+      <div class="resources__articles">
+        <div class="article">
+          <figure>
+            <img src="img/webp/italy.jpg" alt="Italy" class="article__image">
+          </figure>
+          <span class="article__country">
+            Italy
+          </span>
+          <h4 class="article__title">
+            Italian Budget Law introduces mandatory E-invoicing
           </h4>
           <p class="article__text">
             Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus…
