--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -1,4 +1,4 @@
-<header class="header" id="home">
+<header class="header">
   <div class="header__logo-container">
     <svg class="logo--nav-bar">
       <use xlink:href="img/sprite.svg#logo_header_sticky"></use>
