TODO tasks were solved

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,5 +1,5 @@
 <!--Features section start-->
-<section id="company" class="features-section">
+<section id="company" class="features-section" data-ps2id-offset="-102">
   <div class="features-container">
     <div class="features__text-container">
       <h2 class="heading">What can we do for you?</h2>
@@ -188,7 +188,7 @@
         <div class="card card--white">
           <div class="card__top-container">
             <div class="card__icon-container">
-              <svg class="card__icon">
+              <svg class="card__icon card__icon--docs">
                 <use xlink:href="img/sprite.svg#docs"></use>
               </svg>
             </div>
@@ -207,7 +207,7 @@
         <div class="card card--dark-blue">
           <div class="card__top-container">
             <div class="card__icon-container">
-              <svg class="card__icon">
+              <svg class="card__icon card__icon--list">
                 <use xlink:href="img/sprite.svg#list"></use>
               </svg>
             </div>
@@ -226,7 +226,7 @@
         <div class="card card--orange">
           <div class="card__top-container">
             <div class="card__icon-container">
-              <svg class="card__icon">
+              <svg class="card__icon card__icon--university">
                 <use xlink:href="img/sprite.svg#university"></use>
               </svg>
             </div>
@@ -582,6 +582,13 @@
       <ul class="about__team-row">
         <li class="person-container">
           <div class="person">
+            <div class="person-icon-box">
+              <a href="#" class="person__link">
+                <svg class="icon person__icon">
+                  <use xlink:href="img/sprite.svg#icon_ln"></use>
+                </svg>
+              </a>
+            </div>
             <div class="person__image-container">
               <picture>
                 <img src="img/webp/ceo_photo1x.jpg" alt="CEO Photo" class="person__image">
@@ -596,6 +603,13 @@
         </li>
         <li class="person-container">
           <div class="person">
+            <div class="person-icon-box">
+              <a href="#" class="person__link">
+                <svg class="icon person__icon">
+                  <use xlink:href="img/sprite.svg#icon_ln"></use>
+                </svg>
+              </a>
+            </div>
             <div class="person__image-container">
               <picture>
                 <img src="img/webp/manager_director_photo1x.jpg" alt="CEO Photo"
@@ -612,6 +626,13 @@
         
         <li class="person-container">
           <div class="person">
+            <div class="person-icon-box">
+              <a href="#" class="person__link">
+                <svg class="icon person__icon">
+                  <use xlink:href="img/sprite.svg#icon_ln"></use>
+                </svg>
+              </a>
+            </div>
             <div class="person__image-container">
               <picture>
                 <img src="img/webp/financial_director_photo1x.jpg" alt="CEO Photo"
@@ -627,6 +648,13 @@
         </li>
         <li class="person-container">
           <div class="person">
+            <div class="person-icon-box">
+              <a href="#" class="person__link">
+                <svg class="icon person__icon">
+                  <use xlink:href="img/sprite.svg#icon_ln"></use>
+                </svg>
+              </a>
+            </div>
             <div class="person__image-container">
               <picture>
                 <img src="img/webp/hr_director_photo1x.jpg" alt="CEO Photo" class="person__image">
