features&solutions adaptive

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,8 +1,8 @@
 <!--Features section start-->
 <section id="company" class="features-section" data-ps2id-offset="-102">
   <div class="features-container">
+    <h2 class="heading">What can we do for you?</h2>
     <div class="features__text-container">
-      <h2 class="heading">What can we do for you?</h2>
       <p class="features__text">
         <strong class="features__text features__text--accent">KST</strong> is a Swiss Organisation
                                                                            specialising in meeting
@@ -134,7 +134,7 @@
 <section id="solutions" class="solutions-section">
   <div class="container">
     <div class="solutions__text-container">
-      <h2 class="heading">
+      <h2 class="heading mb-4">
         KST solutions
       </h2>
       <p class="solutions__text">
@@ -168,7 +168,6 @@
           </p>
         </div>
       </div>
-      
       <ul class="solutions__list">
         <li class="solutions__item"><span>e</span>Invoicing</li>
         <li class="solutions__item"><span>e</span>Accounting</li>
@@ -185,63 +184,68 @@
     </p>
     <div class="row">
       <div class="cards-container">
-        <div class="card card--white">
-          <div class="card__top-container">
-            <div class="card__icon-container">
-              <svg class="card__icon card__icon--docs">
-                <use xlink:href="img/sprite.svg#docs"></use>
-              </svg>
+        <div class="card-box">
+          <div class="card card--white">
+            <div class="card__top-container">
+              <div class="card__icon-container">
+                <svg class="card__icon card__icon--docs">
+                  <use xlink:href="img/sprite.svg#docs"></use>
+                </svg>
+              </div>
+              <span class="card__number card__number--dark-blue">1</span>
             </div>
-            <span class="card__number card__number--dark-blue">1</span>
+            <h3 class="card__title card__title--dark-blue">Collect &
+                                                           Gather</h3>
+            <ul class="card__list card__list--dark-gray">
+              <li class="card__item">Gather data from existing system</li>
+              <li class="card__item">Carry out extensive data validation</li>
+              <li class="card__item">Prepare data for storage</li>
+            </ul>
           </div>
-          <h3 class="card__title card__title--dark-blue">Collect &
-                                                         Gather</h3>
-          <ul class="card__list card__list--dark-gray">
-            <li class="card__item">Gather data from existing system</li>
-            <li class="card__item">Carry out extensive data validation</li>
-            <li class="card__item">Prepare data for storage</li>
-          </ul>
         </div>
       </div>
       <div class="cards-container cards-container--wider">
         <div class="card card--dark-blue">
-          <div class="card__top-container">
-            <div class="card__icon-container">
-              <svg class="card__icon card__icon--list">
-                <use xlink:href="img/sprite.svg#list"></use>
-              </svg>
+          <div class="card-box">
+            <div class="card__top-container">
+              <div class="card__icon-container">
+                <svg class="card__icon card__icon--list">
+                  <use xlink:href="img/sprite.svg#list"></use>
+                </svg>
+              </div>
+              <span class="card__number card__number--teal">2</span>
             </div>
-            <span class="card__number card__number--teal">2</span>
+            <h3 class="card__title card__title--wide">Prepare, Submit & Validate
+            </h3>
+            <ul class="card__list card__list--light-gray">
+              <li class="card__item">Collect & Clean</li>
+              <li class="card__item">Validate prior to submission</li>
+              <li class="card__item">One touch submission</li>
+            </ul>
           </div>
-          <h3 class="card__title card__title--wide">Prepare, Submit & Validate
-          </h3>
-          <ul class="card__list card__list--light-gray">
-            <li class="card__item">Collect & Clean</li>
-            <li class="card__item">Validate prior to submission</li>
-            <li class="card__item">One touch submission</li>
-          </ul>
         </div>
       </div>
       <div class="cards-container">
-        <div class="card card--orange">
-          <div class="card__top-container">
-            <div class="card__icon-container">
-              <svg class="card__icon card__icon--university">
-                <use xlink:href="img/sprite.svg#university"></use>
-              </svg>
+        <div class="card-box">
+          <div class="card card--orange">
+            <div class="card__top-container">
+              <div class="card__icon-container">
+                <svg class="card__icon card__icon--university">
+                  <use xlink:href="img/sprite.svg#university"></use>
+                </svg>
+              </div>
+              <span class="card__number card__number--white">3</span>
             </div>
-            <span class="card__number card__number--white">3</span>
+            <h3 class="card__title">Clarify &
+                                    Confirm</h3>
+            <ul class="card__list card__list--black">
+              <li class="card__item">Real time two way communication</li>
+              <li class="card__item">Full error and status management</li>
+              <li class="card__item">Integrated global analytics</li>
+            </ul>
           </div>
-          <h3 class="card__title">Clarify &
-                                  Confirm</h3>
-          <ul class="card__list card__list--black">
-            <li class="card__item">Real time two way communication</li>
-            <li class="card__item">Full error and status management</li>
-            <li class="card__item">Integrated global analytics</li>
-          </ul>
         </div>
       </div>
-    
     </div>
     <div class="scheme">
       <div class="scheme__top">
