home page mobile version was added

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -183,7 +183,7 @@
                                                                              end to end.</strong>
     </p>
     <div class="row">
-      <div class="cards-container">
+      <div class="cards-container cards-container--first">
         <div class="card-box">
           <div class="card card--white">
             <div class="card__top-container">
@@ -205,8 +205,8 @@
         </div>
       </div>
       <div class="cards-container cards-container--wider">
-        <div class="card card--dark-blue">
-          <div class="card-box">
+        <div class="card-box">
+          <div class="card card--dark-blue">
             <div class="card__top-container">
               <div class="card__icon-container">
                 <svg class="card__icon card__icon--list">
