--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -8,6 +8,21 @@
     </svg>
   </div>
   <nav class="main-nav" role="navigation">
+    <div class="header__contacts  header__contacts--sidebar">
+      <a href="#" class="header__icon-container header__icon-container--sidebar">
+        <svg class="icon icon--ln-gray">
+          <use xlink:href="img/sprite.svg#icon_ln"></use>
+        </svg>
+      </a>
+      <div class="header__btn-container  header__btn-container--sidebar">
+        <button class="btn">contact us</button>
+      </div>
+      <div class="burger-sidebar">
+        <span class="burger-sidebar__top-line"></span>
+        <span class="burger-sidebar__mid-line"></span>
+        <span class="burger-sidebar__bot-line"></span>
+      </div>
+    </div>
     <ul class="main-nav__list">
       <li class="main-nav__item">
         <a href="#home" class="main-nav__link">Home</a>
@@ -37,6 +52,11 @@
     </a>
     <div class="header__btn-container">
       <button class="btn">contact us</button>
+    </div>
+    <div class="burger">
+      <span class="burger__top-line"></span>
+      <span class="burger__mid-line"></span>
+      <span class="burger__bot-line"></span>
     </div>
   </div>
 </header>
