article page was added

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -360,7 +360,7 @@
             SAF-T, an initiative led the Organisation for Economic Co-operation and Development
             (OECD)…
           </p>
-          <a href="#" class="article__link">
+          <a href="./article.html" class="article__link">
             Read more
           </a>
         </div>
