--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -28,6 +28,7 @@
         <a href="#home" class="main-nav__link">Home</a>
       </li>
       <li class="main-nav__item">
+        <!--@TODO offsets-->
         <a href="#company" class="main-nav__link" data-ps2id-offset="100">Company</a>
       </li>
       <li class="main-nav__item">
