responsive article page

--- a/source/html_blocks/header/article_header.html
+++ b/source/html_blocks/header/article_header.html
@@ -21,23 +21,25 @@
       </div>
     </div>
     <ul class="article-page-nav__list">
-      <li class="article-page-navv__item">
-        <a href="#home" class="article-page-nav__link">Home</a>
+      <li class="article-page-nav__item">
+        <a href="index.html#home" class="article-page-nav__link">Home</a>
       </li>
       <li class="article-page-nav__item">
-        <a href="#company" class="article-page-nav__link" data-ps2id-offset="100">Company</a>
+        <a href="index.html#company" class="article-page-nav__link">Company</a>
       </li>
       <li class="article-page-nav__item">
-        <a href="#solutions" class="article-page-nav__link">KST Solutions</a>
+        <a href="index.html#solutions" class="article-page-nav__link">KST Solutions</a>
       </li>
       <li class="article-page-nav__item">
-        <a href="#resources" class="article-page-nav__link">Resources</a>
+        <a href="index.html#resources"
+           class="article-page-nav__link article-page-nav__link--active">Resources
+        </a>
       </li>
       <li class="article-page-nav__item">
-        <a href="#coverage" class="article-page-nav__link">Coverage</a>
+        <a href="index.html#coverage" class="article-page-nav__link">Coverage</a>
       </li>
       <li class="article-page-nav__item">
-        <a href="#about" class="article-page-nav__link">About us</a>
+        <a href="index.html#about" class="article-page-nav__link">About us</a>
       </li>
     </ul>
   </nav>
