--- a/source/html_blocks/scaff/bot.html
+++ b/source/html_blocks/scaff/bot.html
@@ -2,8 +2,9 @@
 <link rel="preload" href="./css/style.min.css" as="style" onload="this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="./css/style.min.css"></noscript>
 <link rel="stylesheet" href="./css/style.min.css">
-<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+<!--<script-->
+  <!--src="https://code.jquery.com/jquery-3.3.1.min.js"-->
+  <!--integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="-->
+  <!--crossorigin="anonymous"></script>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="./js/bundle.min.js" async></script>
